--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.5"
 services:
-  screeps-server:
+  server:
     image: "ags131/screeps-server"
     depends_on:
       - screeps-redis
@@ -12,7 +12,7 @@ services:
     ports:
       - 21025:21025
 
-  screeps-redis:
+  redis:
     image: "redis:3.0.6"
     networks:
       - screeps-net
@@ -21,7 +21,7 @@ services:
     expose:
       - 6379
 
-  screeps-mongo:
+  mongo:
     image: "mongo:2.6.4"
     networks:
       - screeps-net
