--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,13 @@
 version: "3.5"
 services:
   server:
-    image: "ags131/screeps-server"
+    container_name: "screeps-server"
+    image: "hopgoldy-screeps-server"
     depends_on:
       - redis
       - mongo
     volumes:
-      - $PWD:/screeps
+      - $PWD/screeps-server:/screeps
     networks:
       - screeps-net
     ports:
